[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Sword Coming <impish-clang-swell@duck.com>"]
edition = "2021"
publish = false
repository = "https://github.com/jscptman/network_top_to_down"

[workspace.dependencies]
serde = { version = "1.0.217", features = ["default"] }
tokio = { version = "1.43.0", features = ["default"] }
