[package]
authors.workspace = true
edition.workspace = true
name = "chapter_2"
publish.workspace = true
repository = "https://github.com/jscptman/network_top_to_down"
version = "0.1.0"

[[bin]]
name = "2_1"
path = "src/bin/2.1.rs"
required-features = ["http"]

[dependencies]
hyper = { version = "1.6.0", optional = true, features = ["server", "http2"] }
hyper-util = { version = "0.1.16", features = ["tokio"], optional = true }
http-body-util = { version = "0.1.3", features = ["default"], optional = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net"] }

[features]
http = ["dep:hyper", "dep:hyper-util", "dep:http-body-util"]
